<resources>
    <string name="app_name">Make Kots Great Again</string>

    <!--login Page-->
    <string name="login_sign"><b>Sign In</b></string>
    <string name="login_welcome">Hi there ! Nice to see you again</string>
    <string name="login_email">Email or Username</string>
    <string name="login_email_hint">example@email.com</string>
    <string name="login_password">Password</string>
    <string name="login_password_hint">******</string>
    <string name="login_or">or</string>
    <string name="login_scan">QR Scan</string>

    <!--page n°2-->
    <string name="page2_choose_list">Choose your list :</string>
    <string name="page2_new_product">Add Product</string>
    <string name="page2_mode_achat">Mode Achat</string>
    <string name="preference_file_key"></string>

    <!--page QR-->
    <string name="qr_text"><b>Page QR</b></string>

    <!--page n°3-->
    <string name="page3_reserve1">Ne pas ajouter\n à la réserve</string>

    <string name="page3_reserve2">Ajouter à\n la réserve</string>
</resources>